force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__Hidden__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Hidden__c</fullName>
    <description>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</description>
    <inlineHelpText>Unsupported Field</inlineHelpText>
    <label>Hidden</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>True</fullName><default>false</default><label>True</label></value>
            <value><fullName>False</fullName><default>false</default><label>False</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>