force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source_System_Id__c</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>